# geo-miner-ai

./: .chromatic.json  .eslintrc.json  .gitignore  .prettierignore  .prettierrc  3D geological domain modeling system .docx  Cold areas Geology.docx  Current Feature Set and Alignment with African Mining Needs.docx  Dockerfile  How to use Heatmap.docx  Pitch for GeoVision Al to VC.docx  Product Development Specification (PDS) for GeoVision AI Miner.docx  README.md  docker-compose.prod.yml  docker-compose.staging.yml  docker-compose.yml  jest.config.js  jest.error-handling.config.js  jest.polyfills.js  jest.setup.js  next.config.js  nginx.conf  package-lock.json  package.json  playwright.config.ts  pnpm-lock.yaml  requirements.txt  stryker.components.conf.json  stryker.conf.json  stryker.config.mjs  stryker.lib.conf.json  tsconfig.json
.github/workflows/: ci-cd.yml
.husky/: pre-commit
.storybook/: main.ts  preview.ts  test-runner.ts
Geo Miner/: Sendgrid.docx  ~$ geological domain modeling system .docx
Geo Miner/geovision-ai-miner-client/: Dockerfile  README.md  package-lock.json  package.json
__tests__/components/: ai-analysis-panel.test.tsx  dashboard.test.tsx
__tests__/error-handling/: api-client-errors.test.ts  auth-context-errors.test.tsx  error-boundary.test.tsx  login-error-scenarios.test.tsx  setup.ts
__tests__/integration/: auth-flow.test.tsx
__tests__/utils/: api-mocks.ts  (+2 more)
app/: auth.py  crud.py  layout.tsx  main.py  page.tsx
components/: ai-analysis-panel.stories.tsx  ai-analysis-panel.tsx  dashboard-enhanced.tsx  dashboard.stories.tsx  dashboard.tsx  dataset-manager.tsx  error-boundary.tsx  geological-map.tsx  navigation-mobile.tsx  navigation.tsx  project-overview.tsx  protected-route.tsx  realtime-updates.tsx  user-profile.tsx
docs/: e2e-testing.md  figma-integration-roadmap.md  mutation-testing-findings.md  mutation-testing.md  visual-testing.md
e2e/: accessibility.spec.ts  ai-analysis.spec.ts  auth.spec.ts  cross-browser.spec.ts  dashboard.spec.ts  dataset-management.spec.ts  global-setup.ts  global-teardown.ts  performance.spec.ts
geovision-ai-miner-client/: FIGMA_INTEGRATION.md  INTEGRATION_GUIDE.md  README.md  STORYBOOK_README.md  figma-config.json  package-lock.json  package.json  tailwind.config.js
geovision-ai-miner-client/geovision-ai-miner-server/: .env.example  API_DOCUMENTATION.md  ARCHITECTURE.md  Dockerfile  MODULES.md  Makefile  docker-compose.dev.yml  env.example  pyproject.toml
geovision-ai-miner-client/geovision-ai-miner-server/app/: __init__.py
geovision-ai-miner-client/geovision-ai-miner-server/app/api/api_v1/: api.py
geovision-ai-miner-client/geovision-ai-miner-server/app/api/api_v1/endpoints/: ai_analysis.py  auth.py  chained_analysis.py  users.py
geovision-ai-miner-client/geovision-ai-miner-server/app/core/: database.py  neo4j_client.py
geovision-ai-miner-client/geovision-ai-miner-server/app/schemas/: geological_graph.py  user.py
geovision-ai-miner-client/geovision-ai-miner-server/app/services/: ai_agents.py  geological_analysis.py  geological_graph.py
geovision-ai-miner-client/geovision-ai-miner-server/scripts/: deploy.sh  neo4j-setup.sh  setup.sh
geovision-ai-miner-server/: .gitignore  Dockerfile  Makefile  README.md  SAAS_PRICING_GUIDE.md  deploy-cloudflare.sh  deploy-to-production.sh  deploy.sh  docker-compose.prod.yml  docker-compose.yml  init-build.sh  prestart.sh  production.env  pyproject.toml  start.sh  test_backend.py  vercel.json  wrangler.toml
geovision-ai-miner-server/.geovision-ai-miner-client/: _headers
geovision-ai-miner-server/api/: index.py  requirements.txt
geovision-ai-miner-server/app/: analytics.py  auth.py  crud.py  database.py  main.py  models.py  performance.py  schemas.py  websockets.py
geovision-ai-miner-server/app/api/: __init__.py
geovision-ai-miner-server/app/api/api_v1/endpoints/: geological_graph.py
geovision-ai-miner-server/app/api/endpoints/: analytics.py  collaboration.py  data.py  pricing.py
geovision-ai-miner-server/app/core/: config.py  security.py
geovision-ai-miner-server/app/schemas/: __init__.py  chained_analysis.py
geovision-ai-miner-server/app/services/: chained_analysis_service.py  geochemical_analysis.py  notification_service.py
geovision-ai-miner-server/examples/: neo4j_usage.py
geovision-ai-miner-server/geovision-ai-miner-client/: .env.example  Dockerfile  Dockerfile.prod  package-lock.json  package.json  vercel.json
geovision-ai-miner-server/geovision-ai-miner-client/public/: index.html
geovision-ai-miner-server/geovision-ai-miner-client/src/: App.tsx
geovision-ai-miner-server/geovision-ai-miner-client/src/components/features/: Dashboard.tsx
geovision-ai-miner-server/geovision-ai-miner-client/src/components/layout/: Sidebar.tsx
geovision-ai-miner-server/geovision-ai-miner-client/src/components/ui/: Button.tsx  Card.tsx
geovision-ai-miner-server/geovision-ai-miner-client/src/components/visualization/: DataChart.tsx  GeologicalMap.tsx
geovision-ai-miner-server/geovision-ai-miner-server/: Dockerfile.prod
geovision-ai-miner-server/nginx/: nginx.conf
geovision-ai-miner-server/scripts/: init_pricing_plans.py
geovision-ai-miner-server/src/components/geospatial/: DrillHoleAnalyzer.tsx  LiDARViewer.tsx
geovision-ai-miner-server/src/components/pricing/: PricingPlans.tsx  SubscriptionManager.tsx  UsageDashboard.tsx
geovision-ai-miner-server/src/components/ui/: Modal.tsx  Sidebar.tsx  Table.tsx  Tabs.tsx  ToastProvider.tsx
geovision-ai-miner-server/src/services/: pricingService.ts
geovision-ai-miner-server/worker/: index.js  package-lock.json  package.json
lib/: api.ts  auth-context.tsx  auth-supabase.tsx  color-system.ts  map-service.ts  monitoring.ts  rate-limit-handler.tsx  responsive-system.ts  supabase.ts  typography-system.ts  utils.ts  webhook-handler.tsx
public/: manifest.json
scripts/: deploy.sh  mutation-analysis.ts  mutation-improvement-tracker.ts  mutation-test-runner.ts  run-error-tests.sh  supabase-migration.sh  supabase-setup.sh
src/: App.test.tsx
types/: api.ts  auth.ts  global.d.ts  utils.ts
(+96 files in other folders)
