[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "geo-miner-backend"
dynamic = ["version"]
description = "Advanced AI-powered mining exploration platform backend"
authors = [
    {name = "GeoMiner Team", email = "dev@geo-miner.com"},
]
dependencies = [
    # Core Framework
    "fastapi[all]>=0.104.1",
    "uvicorn[standard]>=0.24.0",
    "gunicorn>=21.2.0",
    
    # Database
    "sqlalchemy>=2.0.23",
    "alembic>=1.13.0",
    "psycopg2-binary>=2.9.9",
    "geoalchemy2>=0.14.2",
    
    # Graph Database - Neo4j
    "neo4j>=5.15.0",
    "py2neo>=2021.2.4",
    "networkx>=3.2.1",
    
    # Authentication & Security
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "python-multipart>=0.0.6",
    
    # Background Tasks
    "celery[redis]>=5.3.4",
    "redis>=5.0.1",
    
    # Data Processing
    "pandas>=2.1.4",
    "numpy>=1.26.2",
    "geopandas>=0.14.1",
    "shapely>=2.0.2",
    
    # AI/ML Core
    "scikit-learn>=1.3.2",
    "openai>=1.3.0",
    "langchain>=0.1.0",
    "langchain-openai>=0.0.2",
    
    # Geological Analysis Tools
    "geopy>=2.4.0",
    "folium>=0.15.0",
    "plotly>=5.17.0",
    "scipy>=1.11.4",
    "gstools>=1.4.0",
    "pykrige>=1.6.0",
    
    # Webhooks & API Integration
    "requests>=2.31.0",
    "aiohttp>=3.9.1",
    "websockets>=12.0",
    
    # Monitoring & Logging
    "prometheus-client>=0.19.0",
    "structlog>=23.2.0",
    
    # Configuration
    "pydantic-settings>=2.1.0",
    "python-dotenv>=1.0.0",
    
    # Utilities
    "httpx>=0.25.2",
    "aiofiles>=23.2.1",
    "email-validator>=2.1.0",
    "python-slugify>=8.0.1",
    "pytz>=2023.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.3",
    "pytest-asyncio>=0.21.1",
    "pytest-cov>=4.1.0",
    "httpx>=0.25.2",
    "black>=23.11.0",
    "isort>=5.12.0",
    "flake8>=6.1.0",
    "mypy>=1.7.1",
]

ai = [
    "openai>=1.3.0",
    "langchain>=0.1.0",
    "langchain-openai>=0.0.2",
]

geological = [
    "geopy>=2.4.0",
    "folium>=0.15.0",
    "plotly>=5.17.0",
    "scipy>=1.11.4",
    "gstools>=1.4.0",
    "pykrige>=1.6.0",
]

[project.urls]
Homepage = "https://geo-miner.com"
Documentation = "https://docs.geo-miner.com"
Repository = "https://github.com/geominer/geo-miner-backend.git"

[tool.hatch.version]
path = "app/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.black]
line-length = 88
target-version = ['py311']
include = '\.pyi?$'

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q --cov=app --cov-report=term-missing"
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.coverage.run]
source = ["app"]
omit = ["*/tests/*", "*/migrations/*"] 